ola-parser/src/testdata/syntaxTests/parsing/missing_variable_name_in_declaration.sol
contract test {
    u256 ;
}
// ----
// ParserError 2314: (28-29): Expected identifier but got ';'
